--- a/My Portfolio/index.html
+++ b/My Portfolio/index.html
@@ -1,1 +1,162 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Poppins:wght@200&display=swap"
+        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet" />
+    <title>My Portfolio</title>
+</head>
+
+<body>
+    <header>
+    
+        <div class="container">
+            <nav class="flex items-centre justify-between">
+                <div class="left flex justfiy-right">
+                    <div class="logo"> 
+                        <img src="" width="50px" alt="logo">
+                     </div>
+                    <div> 
+                        <a href="#">Home</a> 
+                        <a href="#">About</a> 
+                        <a href="#">Project</a></li>
+                        <a href="#">More</a> 
+                    </div>
+                </div>
+                <div class="right"> 
+                    <button class="btn btn-primary">Contact</button> 
+                </div>
+            </nav>
+        </div>
+        <div class="hero flex items-centre justify-between">
+            <div class="left flex-1 justify-center">
+                <img src="profile.jpg" />
+            </div>
+            <div class="right flex-1">
+                <h6>ANWESHA BISHUE</h6>
+                <h1>
+                    I'm a Web<br />
+                    <span>Developer</span>
+                </h1>
+                <p>
+                    I am a final-year BCA student with a passion for web development. I am currently working on projects involving HTML, CSS, and JavaScript to enhance my skills and build a strong portfolio.
+                </p>
+                <div>
+                    <button class="btn btn-secondary">DOWNLOAD CV</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section class="about">
+        <div class="container flex items-centre">
+            <div class="left flex-1 justify-right">
+                <img src="https://miro.medium.com/v2/resize:fit:1024/1*42LOujzw6raNcI69lIdkdQ.png"
+                    height="400px" alt="profile pic" />
+            </div>
+            <div class="right flex-1">
+                    <div class="skills">
+                        <div class="right-content">
+                          <div>
+                            <h1 class="skills-heading">My Skills</h1>
+                          </div>
+                          <div class="skills-bar">
+                            <div class="bar">
+                              <div class="info">
+                                <span>HTML</span>
+                              </div>
+                              <div class="progress-line"><span class="html"></span></div>
+                              <div class="bar">
+                                <div class="info">
+                                  <span>CSS</span>
+                                </div>
+                                <div class="progress-line"><span class="css"></span></div>
+                                <div class="bar">
+                                  <div class="info">
+                                    <span>BOOTSTRAP</span>
+                                  </div>
+                                  <div class="progress-line"><span class="bootstrap"></span></div>
+                                  <div class="bar">
+                                    <div class="info">
+                                      <span>JAVASCRIPT</span>
+                                    </div>
+                                    <div class="progress-line"><span class="javascript"></span></div>
+                                    <div class="bar">
+                                      <div class="info">
+                                        <span>C Programming</span>
+                                      </div>
+                                      <div class="progress-line"><span class="c"></span></div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                
+                <div class="socials">
+                    <div class="socials h1">
+                        <h1>Contact Me</h1>
+                    </div>
+                    <a href="#">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/600px-LinkedIn_logo_initials.png"
+                            width="40px" />
+                        </a>
+                    <a href="#">
+                        <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
+                            width="40px" />
+                        </a>
+                    <a href="#">
+                        <img src="https://miro.medium.com/v2/resize:fit:1020/0*xJCLQQRZv3XFMUd1"
+                            width="40px" />
+                        </a>
+                    <a href="#">
+                        <img src="https://png.pngtree.com/png-clipart/20200721/original/pngtree-gmail-logo-png-png-image_4868140.jpg" alt="" width="50px">
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="services">
+        <div class="container">
+            <h1 class="services-head">Project</h1>
+            <p>Some project... covered.</p>
+            <div class="card-grid">
+                <div class="card">
+                    <img src="https://ritalinboy.com/app/uploads/2022/05/148-1487614_spotify-logo-small-spotify-logo-transparent-hd-png.png" />
+                    <h2>Spotify clone</h2>
+                    <p>
+                        using HTML and CSS.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/4bbd7c18252695.5630ad521e130.png" />
+                    <h2>Simon Says Game</h2>
+                    <p>
+                        This project incorporates event listeners, DOM manipulation, and a touch of random generation.
+                    </p>
+                </div>
+                <div class="card">
+                    <img src="https://cdn-icons-png.flaticon.com/512/1458/1458523.png" />
+                    <h2>A Landing Page</h2>
+                    <p>
+                        using HTML,CSS and Javascript.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+</body>
+
+</html>
+
 
